--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My Love</title>
   <link rel="stylesheet" href="MyLove/styles/form.css">
 
   <link rel="stylesheet" href="MyLove/styles/reset.css">
@@ -39,6 +39,6 @@
  
 
   
-<script src="/script/script.js"></script>
+<script src="MyLove/script/script.js"></script>
 </body>
 </html>
